[package]
name = "csinsertion_sort"
version = "0.1.2"
edition = "2021"
description = "Insertion sort implementation for indexable collections"
authors = ["Elihu Diaz Álvarez"]
keywords = ["insertion_sort", "sort", "vec", "array", "indexable"]
license = "MIT"
repository = "https://github.com/cstffx/csinsertion_sort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
