[package]
name = "csselection_sort"
version = "0.1.2"
edition = "2021"
description = "Selection sort implementation for indexable collections"
authors = ["Elihu Diaz Álvarez"]
keywords = ["selection", "algorithm", "sort", "vec", "array"]
license = "MIT"
repository = "https://github.com/cstffx/csinsertion_sort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
